fix: CSS layout issues for small screen responsiveness

--- a/src/components/common/QuestionnaireLabel/ExpandedModal/NetPromoter.module.css
+++ b/src/components/common/QuestionnaireLabel/ExpandedModal/NetPromoter.module.css
@@ -6,7 +6,7 @@
   right: 0;
   transform: translateY(-50%);
   z-index: 9;
-  height: 218px;
+  height: 241px;
   width: 367px;
   background-color: #fff;
   border: 4px solid main-yellow;
@@ -62,7 +62,7 @@
   max-width: 216px;
   max-height: 86px;
   position: absolute;
-  left: -4px;
+  left: -10px;
   bottom: -10px;
 }
 
@@ -78,6 +78,7 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 15px;
+  z-index: 9;
 }
 
 .closeButton {
@@ -175,4 +176,20 @@
 
 .rangeLabels span {
   font-size: 12px;
+}
+
+@media (max-width: 360px) {
+  .question span {
+    font-size: 12px;
+  }
+
+  .nextStepContainer img {
+    left: -24px;
+  }
+}
+
+@media (max-width: 280px) {
+  .nextStepContainer img {
+    display: none;
+  }
 }
